--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "clsx": "^1.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-merge-refs": "^1.1.0",
     "swiper": "^8.1.1"
   },
   "devDependencies": {
