--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "clsx": "^1.1.1",
+    "keen-slider": "^6.6.11",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-merge-refs": "^1.1.0",
-    "swiper": "^8.1.1"
+    "swiper": "^8.1.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
