--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-storybook": "^0.5.8",
+    "firebase": "^9.8.1",
     "husky": "^7.0.4",
     "next-auth": "^4.3.1",
     "postcss": "^8.4.8",
