--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,24 +2,24 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [14.x, 15.x]
- steps:
-- uses: actions/checkout@v3
-- name: Use Node.js
-  uses: actions/setup-node@v3
-  with:
-    node-version: ${{ matrix.node-version }}
-    cache: 'yarn'
-- name: Install dependencies
-  run: yarn --frozen-lockfile
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      - run: yarn --frozen-lockfile
+      - run: yarn build --if-present
