--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn --frozen-lockfile
+      - run: yarn
       - run: yarn build --if-present
