build: added env to ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
 env:
-  NEXT_PUBLIC_FIREBASE_API_KEY: ${{ env.NEXT_PUBLIC_FIREBASE_API_KEY }}
+  NEXT_PUBLIC_FIREBASE_API_KEY: ${{ process.env.NEXT_PUBLIC_FIREBASE_API_KEY }}
 
 jobs:
   build:
