--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-auth": "^4.3.1",
     "postcss": "^8.4.8",
     "prettier": "^2.6.2",
+    "react-responsive": "^9.0.0-beta.8",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   },
